# ethusdt_own_moves

./: .gitignore  Dockerfile  README.md  demo_local.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/eth_own_moves/: __init__.py  analysis.py  app.py  config.py  main.py  models.py  storage.py  stream.py
tests/: test_analysis.py  test_detector.py  test_stream.py
